--- a/style.css
+++ b/style.css
@@ -1,29 +1,36 @@
+@font-face {
+    font-family: myFirstFont;
+    src: url(digital-7.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: myFirstFont;
 }
 
 body {
-    padding: 30px 20px;
+    padding: 0px 0px;
     display: flex;
     justify-content: left;
     align-items: top;
-    min-height: 60vh;
-    background: #FF7BAD;
+    min-height: 100vh;
+    background: none;
+    background-color: none;
+
 }
 
 .container {
     position: relative;
     width: 300px;
-    height: 390px;
-    background: #929FBC;
+    height: 410px;
+    background: #DAD6D3;
     padding: 20px 15px 10px;
     border:5px solid;
     border-width: 5px;
     border-color: #4E2B62;
-    border-radius: 35px;
+    border-radius: 4px;
     box-shadow: 25px 25px 75px rgba(0,0,0,0.25),
     10px 10px 70px rgba(0,0,0,0.25);
 }
@@ -34,12 +41,12 @@ body {
     justify-items: center;
 }
 
-.calculator .value {
+.calculator .output {
     position: relative;
     grid-column: span 4;
-    height: 50px;
+    height: 65px;
     width: 90%;
-    background: #99EDFF;
+    background: #BFBFA1;
     margin-bottom: 10px;
     border: 2px solid;
     border-radius: 15px;
@@ -52,8 +59,8 @@ body {
 .calculator span {
     position: relative;
     display: grid;
-    height: 50px;
-    width: 50px;
+    min-height: 50px;
+    min-width: 50px;
     margin: 2px;
     color: #4E2B62;
     user-select: none;
@@ -65,10 +72,15 @@ body {
     border:5px solid;
     border-radius: 10px;
     border-color: #4E2B62;
-    border-width: 3px;
-    
+    border-width: 4px;    
 }
 
+.calculator span:hover {
+    border-color: #ffffff;
+    color: #ffffff;
+    background-color: #4E2B62;
+
+}
 
 .calculator span i {
     position: relative;
@@ -88,3 +100,32 @@ body {
     height: 110px;
 
 }
+
+   .output{
+    grid-column: 1 / -1;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
+
+  .output .previous-operand{
+    color: rgba(20, 20, 20, 0.75);
+    font-size: 15px;
+  }
+
+  .output .current-operand{
+    color: #000;
+    font-size: 25px;
+  }
+
+  .footText {
+    grid-column: span 4;
+    text-align: center;
+    padding: 5px 20px 10px 20px;
+    color: #4E2B62;
+    font-weight: 600;
+  }
